--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
         <item>Medium</item>
         <item>Long</item>
     </string-array>
+
+    <string name="add_one">Add one</string>
+    <string name="subtract_one">Subtract one</string>
+    <string name="roll">Roll</string>
 </resources>
